unpackaged/main/default/objects/Billing_Product__c/fields/Shipping_Postal__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Postal__c</fullName>
    <label>Shipping Postal</label>
    <length>18</length>
    <type>Text</type>
</CustomField>