unpackaged/main/default/objects/Billing_Product__c/fields/Shipping_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Schedule__c</fullName>
    <label>Shipping Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>