unpackaged/main/default/objects/Billing_Product__c/fields/Spiff_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Commission_Amount__c</fullName>
    <label>Spiff / Commission Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>