unpackaged/main/default/objects/Billing_Product__c/fields/Starting_Price__c.field-meta.xml
<CustomField>
    <fullName>Starting_Price__c</fullName>
    <description>Starting price of billing product</description>
    <inlineHelpText>Starting price of billing product</inlineHelpText>
    <label>Starting Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>