unpackaged/main/default/objects/Billing_Product__c/fields/Starting_Price_Difference__c.field-meta.xml
<CustomField>
    <fullName>Starting_Price_Difference__c</fullName>
    <formula>Value__c -  Starting_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Starting Price Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>