unpackaged/main/default/objects/Billing_Product__c/fields/This_is_Included_Product__c.field-meta.xml
<CustomField>
    <fullName>This_is_Included_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Product is free as part of Included Composites for Proprietary and ConSept 20 Groups</inlineHelpText>
    <label>Included Product</label>
    <type>Checkbox</type>
</CustomField>