unpackaged/main/default/objects/Billing_Product__c/fields/Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue__c</fullName>
    <inlineHelpText>Total revenue over lifetime of product</inlineHelpText>
    <label>Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>