unpackaged/main/default/objects/Billing_Product__c/fields/Training_Credit__c.field-meta.xml
<CustomField>
    <fullName>Training_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Credit</label>
    <referenceTo>Training_Credit__c</referenceTo>
    <relationshipLabel>Billing Products</relationshipLabel>
    <relationshipName>Billing_Products</relationshipName>
    <type>Lookup</type>
</CustomField>