unpackaged/main/default/objects/Billing_Product__c/fields/Training_Subscription_Account__c.field-meta.xml
<CustomField>
    <fullName>Training_Subscription_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Subscription Account</label>
    <referenceTo>Training_Subscription_Account__c</referenceTo>
    <relationshipLabel>Billing Products</relationshipLabel>
    <relationshipName>Billing_Products</relationshipName>
    <type>Lookup</type>
</CustomField>