unpackaged/main/default/objects/Billing_Product__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>