unpackaged/main/default/objects/Billing_Product__c/fields/Write_to_Opp__c.field-meta.xml
<CustomField>
    <fullName>Write_to_Opp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Write to Opp? (Code)</label>
    <type>Checkbox</type>
</CustomField>