unpackaged/main/default/objects/Billing_Product__c/fields/X20_Group_Account_Member__c.field-meta.xml
<CustomField>
    <fullName>X20_Group_Account_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>20 Group Account Member</label>
    <referenceTo>X20_Groups_Member__c</referenceTo>
    <relationshipLabel>Billing Products</relationshipLabel>
    <relationshipName>Billing_Products</relationshipName>
    <type>Lookup</type>
</CustomField>