unpackaged/main/default/objects/Billing_Product__c/recordTypes/axcessa_store.recordType-meta.xml
<RecordType>
    <fullName>axcessa_store</fullName>
    <active>true</active>
    <label>aXcessa store</label>
</RecordType>