unpackaged/main/default/objects/Billing_Product__c/recordTypes/Benchmark_Products.recordType-meta.xml
<RecordType>
    <fullName>Benchmark_Products</fullName>
    <active>true</active>
    <description>Single Member Products</description>
    <label>Benchmark Products</label>
</RecordType>