unpackaged/main/default/objects/Billing_Product__c/recordTypes/Echo_Store.recordType-meta.xml
<RecordType>
    <fullName>Echo_Store</fullName>
    <active>true</active>
    <label>Echo Store</label>
</RecordType>