unpackaged/main/default/objects/Billing_Product__c/recordTypes/NCM_Fees.recordType-meta.xml
<RecordType>
    <fullName>NCM_Fees</fullName>
    <active>true</active>
    <description>NCM Fees</description>
    <label>NCM Fees</label>
</RecordType>