unpackaged/main/default/objects/Billing_Product__c/recordTypes/NCMi_Cohort_Student.recordType-meta.xml
<RecordType>
    <fullName>NCMi_Cohort_Student</fullName>
    <active>true</active>
    <description>NCMi Cohort Student</description>
    <label>NCMi Cohort Student</label>
</RecordType>