unpackaged/main/default/objects/Billing_Product__c/recordTypes/NCMi_Paid_Seats.recordType-meta.xml
<RecordType>
    <fullName>NCMi_Paid_Seats</fullName>
    <active>true</active>
    <description>Paid Seat for NCM Institute students not using a subscription</description>
    <label>NCMi Paid Seats</label>
</RecordType>