unpackaged/main/default/objects/Billing_Product__c/recordTypes/NCMi_Subscriptions.recordType-meta.xml
<RecordType>
    <fullName>NCMi_Subscriptions</fullName>
    <active>true</active>
    <description>NCMi Subscriptions Products</description>
    <label>NCMi Subscriptions</label>
</RecordType>