unpackaged/main/default/objects/Billing_Product__c/recordTypes/NCMi_Training_Credit.recordType-meta.xml
<RecordType>
    <fullName>NCMi_Training_Credit</fullName>
    <active>true</active>
    <description>NCMi Training Credits</description>
    <label>NCMi Training Credit</label>
</RecordType>