unpackaged/main/default/objects/Billing_Product__c/recordTypes/X20_Group.recordType-meta.xml
<RecordType>
    <fullName>X20_Group</fullName>
    <active>true</active>
    <description>20 Group Member and related products and services.</description>
    <label>20 Group</label>
</RecordType>