unpackaged/main/default/objects/Billing_Product__c/validationRules/Billing_Frequency_not_One_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Frequency_not_One_Time</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
NOT( ISBLANK( Recurring_Billing_Day__c ) ), 
ISPICKVAL( 
Billing_Frequency__c , 
&#39;One-Time&#39; 
) 
)</errorConditionFormula>
    <errorDisplayField>Billing_Frequency__c</errorDisplayField>
    <errorMessage>Cannot use One Time &amp; Recurring Billing Day</errorMessage>
</ValidationRule>