unpackaged/main/default/objects/Billing_Product__c/validationRules/Dimension_1_and_2_Present.validationRule-meta.xml
<ValidationRule>
    <fullName>Dimension_1_and_2_Present</fullName>
    <active>false</active>
    <description>Dim1 and 2 both MUST be present on any Billing Product</description>
    <errorConditionFormula>OR(
isblank( Dimension_1__c )
,
isblank( Dimension_2__c )


)</errorConditionFormula>
    <errorMessage>Enter BOTH Dimension 1 and Dimension 2 - if you tried to create this manually or used the incorrect procedure.</errorMessage>
</ValidationRule>