unpackaged/main/default/objects/Billing_Product__c/validationRules/Included_Product_cannot_be_more_than_3.validationRule-meta.xml
<ValidationRule>
    <fullName>Included_Product_cannot_be_more_than_3</fullName>
    <active>false</active>
    <description>Prop Accounts Cannot have more than 3 included products</description>
    <errorConditionFormula>AND( 

(This_is_Included_Product__c = true) , 

OR((Quantity__c &gt;3), ( Value__c &gt;0),(Value__c &lt;0)) ,

(Proprietary_Account__c &lt;&gt; NULL)
)</errorConditionFormula>
    <errorMessage>This is a Proprietary Group included product - you cannot edit the quantity to be more than 3 nor can the Amount be greater than or less than $0</errorMessage>
</ValidationRule>