unpackaged/main/default/objects/Billing_Product__c/validationRules/Is_Recurring_and_Date_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Recurring_and_Date_Blank</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
ISBLANK( Recurring_Billing_Day__c ), 
NOT( 
ISPICKVAL( 
Billing_Frequency__c , 
&#39;One-Time&#39; 
) 
) 
)</errorConditionFormula>
    <errorDisplayField>Recurring_Billing_Day__c</errorDisplayField>
    <errorMessage>You must add the day of the month it will be billed unless it is a One-Time Billing Product.</errorMessage>
</ValidationRule>