unpackaged/main/default/objects/Billing_Product__c/validationRules/Monthly_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Monthly_Limit</fullName>
    <active>false</active>
    <errorConditionFormula>Recurring_Billing_Day__c &gt; 28</errorConditionFormula>
    <errorDisplayField>Recurring_Billing_Day__c</errorDisplayField>
    <errorMessage>Cannot have Recurring day greater than 28</errorMessage>
</ValidationRule>