unpackaged/main/default/objects/Billing_Product__c/listViews/aXcessa.listView-meta.xml
<ListView>
    <fullName>aXcessa</fullName>
    <columns>NAME</columns>
    <columns>Billing_Account__c</columns>
    <columns>axcessa_Platform_Engagement__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Recurring_Billing_Day__c</columns>
    <columns>Total_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>aXcessa</label>
</ListView>