unpackaged/main/default/objects/Billing_Product__c/listViews/Copy_of_All.listView-meta.xml
<ListView>
    <fullName>Copy_of_All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Quantity__c</columns>
    <columns>Total_Value__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Product_Service__c</columns>
    <columns>Billing_Account__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Billing_Product__c.NCMi_Paid_Seats</value>
    </filters>
    <label>NCMI Paid Seats</label>
</ListView>